# katar-bank

Vision_agent/: README.md  __init__.py  main.py  pyproject.toml  test_ocr_vision_pipeline.ipynb  visualize_mermaid_graph.ipynb
Vision_agent/agent/: root_agent.py  state.py  types.py
Vision_agent/agent/core/: __init__.py  config.py  otel.py  schema_contract.py  schema_validation.py
Vision_agent/agent/core/artifact_management/: factory.py  types.py
Vision_agent/agent/core/memory_management/: __init__.py  types.py
Vision_agent/agent/core/model/: types.py
Vision_agent/agent/prompts/: root_agent.py  vision_model_freeform.py  vision_model_ocr_freeform.py  vision_model_ocr_structured.py  vision_model_ocr_structured_ar.py  vision_model_structured.py
Vision_agent/agent/services/: docai_service.py  file_source_service.py  preprocessing_service.py  vertex_service.py
Vision_agent/agent/tools/: __init__.py  mcp.py  memory.py  ocr_tools.py  preprocess_tools.py  prompt_builder_tool.py  storage_tools.py  vision_tools.py
Vision_agent/agent/utils/: formatters.py  prompt_build.py  vertex_ai_utils.py
Vision_agent/client/: client.py
Vision_agent/docs/: development_guide.md
Vision_agent/services/: docai_service.py
kata-agent/: .env  .env.example  docker-compose.yaml  dockerfile.dev  dockerfile.prod  main.py  pyproject.toml  requirements.txt  test_agent.py
kata-agent/agent/: executor.py  graph.py  server.py
kata-agent/agent/core/: config.py  otel.py
kata-agent/agent/exceptions/: base.py
kata-agent/agent/llm_models/: vertex_ai.py
kata-agent/agent/nodes/: __init__.py
kata-agent/agent/nodes/build_pipeline_prompt/: node.py  prompt.py
kata-agent/agent/nodes/build_vision_prompt/: node.py  prompt.py
kata-agent/agent/nodes/docai_ocr/: node.py
kata-agent/agent/nodes/finalize_ocr_only/: node.py
kata-agent/agent/nodes/finalize_ocr_vision/: node.py
kata-agent/agent/nodes/finalize_vision_only/: node.py
kata-agent/agent/nodes/gemini_vision/: node.py
kata-agent/agent/nodes/prepare_ocr_input/: node.py
kata-agent/agent/nodes/router/: node.py
kata-agent/agent/schemas/: api.py  executor.py  state.py
kata-agent/agent/services/: docai_service.py  file_source_service.py
kata-agent/agent/utils/: docai_utils.py
kata-agent/client/: client.py
kata-agent/upload/: sample_invoice.txt
template/: .env.example  .pre-commit-config.yaml  README.md  dockerfile.prod  main.py  makefile  pyproject.toml
template/agent/: prompt.py  root_agent.py
template/agent/core/: config.py
template/agent/core/artifact_management/: __init__.py
template/agent/exceptions/: __init__.py  base.py
template/agent/sub_agents/: __init__.py
template/agent/tools/: __init__.py  example.py  mcp.py  memory.py
template/docs/: development_uv_guide.md
(+24 files in other folders)
